force-app/main/default/objects/Account/fields/FQS_Match_Annual_Individual_Maximum__c.field-meta.xml
<CustomField>
    <fullName>FQS_Match_Annual_Individual_Maximum__c</fullName>
    <description>Per-individual annual cap on match dollars from this employer. The FQS Find Matching Gift flow sums matched amounts already recorded this calendar year for the individual and excludes candidates that would push the individual over this cap. Leave blank to disable the cap for this employer.</description>
    <inlineHelpText>Maximum dollar amount this employer will match per individual per calendar year. Leave blank if the employer has no per-donor cap. The Find Match flow excludes candidates that would exceed this amount.</inlineHelpText>
    <label>Match Annual Individual Maximum</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>