force-app/main/default/objects/Account/fields/FQS_Match_Ratio__c.field-meta.xml
<CustomField>
    <fullName>FQS_Match_Ratio__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>Multiplier applied to an individual's OriginalAmount when comparing to a corporate match. 2.00 = 2:1 (corporate matches double), 1.00 = 1:1 (default), 0.50 = 0.5:1 (corporate matches half). Used by the FQS Find Matching Gift flow's amount scorer to know what a "correct" match amount looks like for this employer. If left blank, the flow assumes 1.00.</description>
    <inlineHelpText>The dollar ratio this employer matches at. Enter 1.00 for 1:1 matching (default), 2.00 for 2:1, 0.50 for half-match, etc. Leave blank to use 1.00.</inlineHelpText>
    <label>Match Ratio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>